add logic for the start and reset button

--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ body {
     font-size: 37px;
 }
 
-.sec {
+.second {
     font-size: 37px;
 }
 
-.msec{
+.milliSecond{
     font-size: 27px;
 }
 
