--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ body {
     border: 1px solid white;
     background-color: rgba(255, 255, 255, 0.4);
     color: white;
+    cursor: pointer;
 }
 
 .hidden {
