--- a/style.css
+++ b/style.css
@@ -10,10 +10,36 @@ body {
     font-size: 16px;
     width: 100%;
     height: 100vh;
-    background-color: black;
+    background-color: #787B93;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.container {
+    height: 100vh;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.heading {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    color: white;
+}
+
+.underline {
+    width: 100px;
+    height: 6px;
+    margin-top: 4px;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .watch {
@@ -21,64 +47,78 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
 }
 
-.outer-circle {
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    background-color: white;
+.display {
+    width: 300px;
+    height: 160px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
 }
-
-.inner-circle {
-    width: 230px;
-    height: 230px;
-    border-radius: 50%;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 
 .text {
     color: white;
 }
 
 .minute {
-    font-size: 37px;
+    font-size: 70px;
 }
 
 .second {
-    font-size: 37px;
+    font-size: 70px;
 }
 
-.milliSecond{
-    font-size: 27px;
+.mSecond{
+    font-size: 70px;
 }
 
 .button-group {
-    width: 250px;
+    width: 300px;
     margin-top: 25px;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+.start {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    cursor: pointer;
+    background-color: green;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.stop {
+    width: 70px;
+    height: 70px;
+    border: none;
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+    background-color: #FF0000;
+    box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 2px solid white;
-    background-color: black;
+    border: 1px solid #7D7D7D;
+    border-style: groove;
+    background-color: #787B93;
     color: white;
     cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .button:hover{
-    background-color: white;
+    background-color: #787B93;
     color: black;
 }
 
@@ -124,7 +164,7 @@ body {
     display: block;
     position: fixed;
     z-index: 1000;
-    bottom: 0;
+    bottom: 10px;
     width: 130px;
     padding: 10px 0;
     border-radius: 50px;
@@ -135,5 +175,5 @@ body {
 }
 
 .hidden {
-   visibility: hidden;
+   display: none;
 }
